# Xml_Configuration done

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
+
+############# XML CONFIGURATION ############
+spring.datasource.url=@spring.datasource.url@
+spring.datasource.username=@spring.datasource.username@
+spring.datasource.password=@spring.datasource.password@
+spring.datasource.driverClassName=@spring.datasource.driverClassName@
