--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,13 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
+		<!--Start-->
+		<spring.datasource.driverClassName>org.h2.Driver</spring.datasource.driverClassName>
+		<spring.datasource.url>jdbc:h2:mem:test?useSSL=false</spring.datasource.url>
+		<spring.datasource.username>SA</spring.datasource.username>
+		<spring.datasource.password></spring.datasource.password>
+		<spring.jpa.properties.hibernate.dialect>org.hibernate.dialect.H2Dialect</spring.jpa.properties.hibernate.dialect>
+		<!--End-->
 	</properties>
 	<dependencies>
 		<dependency>
