# Adding New DbFile Class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.h2.console.enabled=true
+spring.h2.console.enabled=true
 
 ############# XML CONFIGURATION ############
 spring.datasource.url=@spring.datasource.url@
