--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,18 @@ spring.datasource.url=@spring.datasource.url@
 spring.datasource.username=@spring.datasource.username@
 spring.datasource.password=@spring.datasource.password@
 spring.datasource.driverClassName=@spring.datasource.driverClassName@
+
+
+## Hibernate Logging
+logging.level.org.hibernate.SQL= DEBUG
+
+
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=200MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=215MB
